# agentic-trust-platform

./: .commitlintrc.json  .editorconfig  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  README.md  commitlint.config.js  components.json  cspell.json  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.cursor/commands/: ticket.md
.github/workflows/: backend-ci.yml  ci.yml
app/: globals.css  layout.tsx  page.tsx
app/activity/: page.tsx
app/agents/: page.tsx
app/analytics/: page.tsx
app/api-keys/: page.tsx
app/docs/: page.tsx
app/help/: page.tsx
app/integrations/: page.tsx
app/mcp-registry/: page.tsx
app/organization/: page.tsx
app/policies/: page.tsx
app/settings/: page.tsx
app/team/: page.tsx
app/webhooks/: page.tsx
backend/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/core/: permissions.py  workos_client.py
backend/app/models/: __init__.py  organization.py  user.py
backend/app/routers/: __init__.py  auth.py  health.py  organizations.py  permissions.py  team.py
backend/app/schemas/: __init__.py
backend/app/services/: workos_service.py
backend/auth-service/: Dockerfile  README.md  pyproject.toml
backend/auth-service/alembic/: env.py
backend/auth-service/alembic/versions/: 001_initial_schema.py
backend/auth-service/app/: database.py  dependencies.py  main.py
backend/auth-service/app/config/: __init__.py  settings.py
backend/auth-service/app/core/: __init__.py  cache.py  circuit_breaker.py  exceptions.py  membership.py  metrics.py  permissions.py  roles.py  session.py  time.py  tracing.py  validators.py  workos_client.py
backend/auth-service/app/middleware/: __init__.py
backend/auth-service/app/models/: __init__.py  audit.py  base.py  organization.py  permission.py  user.py
backend/auth-service/app/repositories/: __init__.py  organization_repository.py  user_repository.py
backend/auth-service/app/routers/: __init__.py  audit.py  auth.py  health.py  organizations.py  permissions.py  team.py
backend/auth-service/app/schemas/: __init__.py  auth.py  organization.py  permissions.py  team.py
backend/auth-service/app/services/: __init__.py  audit_service.py  workos_service.py
backend/auth-service/tests/: __init__.py  conftest.py  test_auth.py  test_circuit_breaker.py  test_exception_handler.py  test_health.py  test_organizations.py  test_team.py  test_validators.py
backend/configs/logging/: auth-service.yaml  base.yaml
backend/shared/: README.md  pyproject.toml
backend/shared/shared/: __init__.py  exceptions.py
backend/shared/shared/auth/: README.md  __init__.py  jwt.py  models.py
backend/shared/shared/log_config/: __init__.py  setup.py  structured_logging.py
backend/shared/shared/middleware/: __init__.py  exception_handler.py  rate_limit.py  request_context.py  security_headers.py
backend/shared/tests/: __init__.py  test_request_context_middleware.py  test_structured_logging.py
backend/tests/: __init__.py  test_health.py
components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  dynamic-favicon.tsx  integration-icon.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  theme-switcher.tsx
components/activity/: audit-log-tab.tsx  executions-tab.tsx  index.ts  trace-viewer.tsx  triggers-tab.tsx
components/agents/: agent-activity.tsx  agent-builder-panel.tsx  (+11 more)
docs/: enterprise-pricing.md  pro-pricing.md  starter-pricing.md  team-pricing.md
hooks/: use-pagination.ts  use-search.ts
lib/: icons.tsx  integration-icons.ts  types.ts  utils.ts
web/: .lintstagedrc.json  .prettierignore  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json
(+176 files in other folders)
